python/testData/highlighting/emptyRaise.py
<error descr="No exception to reraise">raise</error>

try:
    raise ValueError
except:
    raise


try:
    raise ValueError
finally:
    raise